--- a/public/manifest.json
+++ b/public/manifest.json
@@ -20,8 +20,9 @@
       "type": "image/png"
     }
   ],
-  "start_url": "/",
+  "start_url": "/Workout-FE/",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "background_color": "#ffffff",
+  "scope": "/Workout-FE/"
 }
